<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">chatApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phoneNumber_hint">手机号码</string>
    <string name="passWord_hint">密码</string>
    <string name="login_text">登陆</string>
    <string name="register_text">注册</string>
    <string name="can_not_login">无法登陆?</string>
    <string name="new_user">新用户</string>
    <string name="loging">正在登陆</string>
    <string name="registing"></string>
    <string name="please_wait">请等待</string>
    <string name="login_failed">登陆失败，请检查用户名和密码</string>
    <string name="register_failed">注册失败，用户名不可用</string>
    <string name="empty_phone_number">手机号码不能为空</string>
    <string name="empty_pass_word">密码不能为空</string>
    <string name="not_same_pass_word">两次输入的密码不同</string>
    <string name="init_wrong">初始化出错</string>
    <string name="confirm_pass_word">确认密码</string>
    <string name="recend_contact">最近聊天</string>
    <string name="contacts">联系人</string>
    <string name="about_me">关于我</string>
    <string name="setting">设置</string>
    <string name="nearby_people">附近的人</string>
    <string name="find_people">查找用户</string>
    <string name="good_friend">我的好友</string>
    <string name="find_text">查找</string>
    <string name="new_friend">新朋友</string>
    
    <!-- XListView所需要的string -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="personal_infomation">个人资料</string>
    <string name="other_user_information">他人资料</string>
    <string name="data_wrong">数据错误</string>
    <string name="complete_load_data">数据加载完毕</string>
    <string name="searching_friends">正在查找好友</string>
    <string name="no_condition_of_user">没有满足条件的用户</string>
    <string name="avater_text">头像</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="add_friend">加为好友</string>
    <string name="save_info">保存</string>
    <string name="logout">退出登录</string>
    
    <!-- 上传头像dialog -->
    <string name="choose_photo">选择照片</string>
    <string name="choose_photo_by_take_photo">拍摄照片</string>
    <string name="choose_photo_from_photo_album">从相册选取</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    
    <!-- 选择性别dialog -->
    <string name="choose_sex">选择性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    
    <string name="please_input_nick">请输入昵称</string>
    <string name="please_input_signature">请输入签名</string>
</resources>
