<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        style="@style/dialog_item"
        android:text="@string/choose_sex"
        android:textColor="@color/title_color"/>
    
    <ImageView 
        style="@style/horizon_line" />
    
    <TextView
        style="@style/dialog_item"
        android:id="@+id/male"
        android:text="@string/male"
        android:textColor="@color/normal_pink" />
    
    <ImageView 
        style="@style/horizon_line" />
    
    <TextView
        style="@style/dialog_item"
        android:id="@+id/female"
        android:text="@string/female"
        android:textColor="@color/normal_pink" />
    
    <ImageView
        style="@style/horizon_line"/>
    
    <TextView
        style="@style/dialog_item"
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:textColor="@color/btn_cancel_color" />"

</LinearLayout>
