<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".MainActivity" >
    
    <RelativeLayout 
        android:id="@+id/wrap_avatar"
        android:layout_width="match_parent"
        android:layout_height="150dp">
        
        <ImageView 
            android:id="@+id/login_avatar"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            style="@style/avatar_80"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/phoneNumber_passWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_below="@+id/wrap_avatar" >

        <EditText
            android:maxLines="1"
            android:phoneNumber="true"
            android:maxLength="11"
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/phoneNumber_hint"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/divider_line"
            style="@style/horizon_line"
            android:layout_below="@+id/phone_number" />

        <EditText
            android:maxLines="1"
            android:id="@+id/pass_word"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divider_line"
            android:background="@null"
            android:hint="@string/passWord_hint"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:password="true"
            android:textSize="@dimen/text_size" />
    </RelativeLayout>
    
    <TextView 
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phoneNumber_passWord"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" 
        android:text="@string/login_text"
        android:gravity="center_horizontal"
        android:background="@drawable/button_green_selector"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/text_size"/>
    
    <TextView
        android:id="@+id/can_not_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/can_not_login"
        android:textColor="@color/green"
        android:layout_alignParentLeft="true"
        android:textSize="@dimen/text_size" />
    
    <TextView
        android:id="@+id/new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/new_user"
        android:textColor="@color/green"
        android:layout_alignParentRight="true"
        android:textSize="@dimen/text_size" />

</RelativeLayout>
